--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <span class="link"><a href="https://us.pycon.org/2015/">SITE</a></span>
             </h2>
             <div class="location">
-              USA - Montréal
+              Canada - Montréal
             </div>
           </div>
           <div class="clear"></div>
